# optee_paillier_mpc

./: README.md
paillier_mbedtls/: Android.mk  CMakeLists.txt  Makefile
paillier_mbedtls/host/: Makefile  main.c
paillier_mbedtls/ta/: Android.mk  Makefile  paillier_ta.c  sub.mk  user_ta_header_defines.h
paillier_mbedtls/ta/include/: paillier_ta.h
